Changes for Gapp

{{$NEXT}}
- removed print statements
- added initializer to container
- bug fix: MenuToolButton was not rendering icon attribute
- stylers now inherit from stylers applied to ancestor classes
- TreeView get_selected returns array or scalar depending on context
- TreeView coerces default column values

0.484     2012-10-08 12:33:30
- removed debug print statements

0.483     2012-10-08 12:18:51
- BUG FIX: Failing install on clean system, using artifacts

0.482     2012-10-08 00:26:59
- styler/builder inheritance now acts like packer inheritince
    1. Check layout for definition of specific widget
    2. Check parent layouts for definition
    3. If no definition found, repeat steps 1/2 for classes up the widget's hiearchy until a definition is found

0.48
- fixed page_num bug with Assistant
- fixed warning about widget not having AssistantPage trait applied


0.47.7    2012-10-02 11:30:19
- fixing version issues

0.47.6    2012-09-28 17:39:25
- merged Gapp::Gtk2 widgets into Gapp
- new versioning system

0.47.3    2012-09-28 13:15:42
- now using Dist::Zilla

0.47.1 Sep 26 2012
- updating pod

0.47 Sep 25 2012
- updated test suite


0.46.4 Sep 7 2012
- Changed when ListStore sets the args attribute during construction to support
subclassing
- Added trigger to model attribute of TreeStore to update the gtk_widget if it
has been constructed

0.46.3 Sep 6 2012
- added border_width resize_mode property delegations to Container
- added headers_visible headers_clickable property delegations to TreeView

0.46 Sep 5 2012
- calling "add" on an container whose gobject has already been created now packs the
widget into the child
- show_all called on widgets before being added to notebook to ensure that they are
displayed
- removed "form" attribute from FormElement role
- added "form" method to FormElement role which returns the first widget in the
ancestry with the Form trait applied