@@ -12,10 +12,13 @@ use Gapp::Gtk2;
 use Gapp::Moose::Meta::Attribute::Trait::GappActionGroup;
 use Gapp::Moose::Meta::Attribute::Trait::GappAssistant;
 use Gapp::Moose::Meta::Attribute::Trait::GappBox;
+use Gapp::Moose::Meta::Attribute::Trait::GappCheckButton;
 use Gapp::Moose::Meta::Attribute::Trait::GappCheckMenuItem;
 use Gapp::Moose::Meta::Attribute::Trait::GappComboBox;
 use Gapp::Moose::Meta::Attribute::Trait::GappButton;
 use Gapp::Moose::Meta::Attribute::Trait::GappDateEntry;
+use Gapp::Moose::Meta::Attribute::Trait::GappEntry;
+use Gapp::Moose::Meta::Attribute::Trait::GappExpander;
 use Gapp::Moose::Meta::Attribute::Trait::GappEventBox;
 use Gapp::Moose::Meta::Attribute::Trait::GappFileChooserDialog;
 use Gapp::Moose::Meta::Attribute::Trait::GappFileFilter;
