@@ -29,7 +29,7 @@ sub _construct_gobject {
     undef;
     
     # use any build-arguments if they exist
-    my $w = $gtk_class->$gtk_constructor( $group, $self->args ? @{$self->args} : ( ) );
+    my $w = $gtk_class->$gtk_constructor( $group );
     $self->set_gobject( $w );
     
     # save the radio group in the parent
